fixed POST and GET request in profile settings, as well as made profile name text align center in profile component

--- a/frontend/src/components/profile/profile.css
+++ b/frontend/src/components/profile/profile.css
@@ -35,3 +35,7 @@
     display: flex;
     justify-content: flex-end;
 }
+
+.nameTitle {
+    text-align: center;
+}
